--- a/client/src/components/css_components/nav.css
+++ b/client/src/components/css_components/nav.css
@@ -24,7 +24,7 @@ body {
     white-space: nowrap;
     font-family: sans-serif;
     font-size: 13px;
-    color: #444444;
+    color: #8f0000;
     text-decoration: none;
     -webkit-tap-highlight-color: transparent;
     transition: background-color 0.1s ease-in-out;
