--- a/client/src/App.css
+++ b/client/src/App.css
@@ -2,6 +2,8 @@
   text-align: center;
 }
 
+iframe#webpack-dev-server-client-overlay{display:none!important}
+
 .App-logo {
   height: 40vmin;
   pointer-events: none;
